--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="button-box">
             <input type="button" class="btn" value="C" onclick="calcy.display.value=''" id="del">
             <input type="button" class="btn" value="%" onclick="calcy.display.value+='%'">
-            <input type="button" class="btn a" value="DE" onclick="cal.display.value = display.value.toString().slice(0,-1)" id="de">
-            <!--<button type="button" class="btn a" value"delete"  onclick="calcy.display.value=display.value.toString().slice(0,-1)" style="background-color: rgb(119, 118, 115);">
+            <input type="button" class="btn" value="DE" onclick="calcy.display.value = display.value.toString().slice(0,-1)" id="de">
+            <!--<button type="button" class="btn" value"delete"  onclick="calcy.display.value=display.value.toString().slice(0,-1)" style="background-color: rgb(119, 118, 115);">
             <i class="fa-solid fa-delete-left"></i>
             </button>-->
             <input type="button" class="btn" value="/" onclick="calcy.display.value+='/' "><br>
